Add readme, fix cron schedule, improve config

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
+# Farcaster Config
+FARCASTER_USERNAME = ''
+
 # RPC Provider (optional but recommended)
 ALCHEMY_SECRET = ''
 
-# Twitter API COnfig
+# Twitter API Config
 CONSUMER_KEY = ''
 CONSUMER_SECRET = ''
 ACCESS_TOKEN = ''
