Add opt-in/opt-out logic

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
+# Dev Config (speeds up cron schedule)
+NODE_ENV = 'development'
+
 # Farcaster Config
 FARCASTER_USERNAME = ''
+OPT_IN = false
+OPT_IN_MESSAGE = '-t'
+SENT_FROM_FARCASTER = false
 
 # RPC Provider (optional but recommended)
 ALCHEMY_SECRET = ''
